// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useImportSupplyPosition > returns a Fusion quote on success 2`] = `
{
  "data": {
    "amount": 100n,
    "chainId": 97,
    "gasLimit": 100000n,
    "recipient": "0xa258a693A403b7e98fd05EE9e1558C760308cFC7",
    "sender": "0x3d759121234cd36F8124C21aFe1c6852d2bEd848",
    "tokenAddress": "0xfakeAXVSAddress",
  },
  "type": "transferFrom",
}
`;

exports[`useImportSupplyPosition > returns a Fusion quote on success 3`] = `
{
  "data": {
    "abi": Any<Array>,
    "args": [
      "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
      "115792089237316195423570985008687907853269984665640564039457584007913129639935",
      "0xa258a693A403b7e98fd05EE9e1558C760308cFC7",
    ],
    "chainId": 97,
    "functionName": "withdraw",
    "gasLimit": 100000n,
    "to": "0xfakeAaveV3PoolContractAddress",
  },
  "type": "default",
}
`;

exports[`useImportSupplyPosition > returns a Fusion quote on success 4`] = `
{
  "data": {
    "amount": 100n,
    "chainId": 97,
    "gasLimit": 100000n,
    "spender": "0xD5C4C2e2facBEB59D0216D0595d63FcDc6F9A1a7",
    "tokenAddress": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
  },
  "type": "approve",
}
`;

exports[`useImportSupplyPosition > returns a Fusion quote on success 5`] = `
{
  "data": {
    "abi": Any<Array>,
    "args": [
      "0x3d759121234cd36F8124C21aFe1c6852d2bEd848",
      100n,
    ],
    "chainId": 97,
    "functionName": "mintBehalf",
    "gasLimit": 100000n,
    "to": "0xD5C4C2e2facBEB59D0216D0595d63FcDc6F9A1a7",
  },
  "type": "default",
}
`;

exports[`useImportSupplyPosition > returns a Fusion quote on success 6`] = `
[
  [
    {
      "instructions": [
        {
          "calls": [],
          "chainId": 97,
        },
        {
          "calls": [],
          "chainId": 97,
        },
        {
          "calls": [],
          "chainId": 97,
        },
        {
          "calls": [],
          "chainId": 97,
        },
      ],
      "sponsorship": true,
      "trigger": {
        "amount": 20000000000000000000n,
        "approvalAmount": 24024000000000000000n,
        "chainId": 97,
        "gasLimit": 500000n,
        "tokenAddress": "0xfakeAXVSAddress",
      },
    },
  ],
]
`;

exports[`useImportSupplyPosition > returns a Fusion quote on success 7`] = `
[
  [
    {
      "queryKey": [
        "GET_V_TOKEN_BALANCES_ALL",
      ],
    },
  ],
  [
    {
      "queryKey": [
        "GET_POOLS",
      ],
    },
  ],
  [
    {
      "queryKey": [
        "GET_V_TOKEN_BALANCE",
        {
          "accountAddress": "0x3d759121234cd36F8124C21aFe1c6852d2bEd848",
          "chainId": 97,
          "vTokenAddress": "0xD5C4C2e2facBEB59D0216D0595d63FcDc6F9A1a7",
        },
      ],
    },
  ],
  [
    {
      "queryKey": [
        "GET_IMPORTABLE_POSITIONS",
        {
          "accountAddress": "0x3d759121234cd36F8124C21aFe1c6852d2bEd848",
          "chainId": 97,
        },
      ],
    },
  ],
]
`;

exports[`useImportSupplyPosition > returns a Fusion quote on success 8`] = `
[
  [
    {
      "input": {
        "position": {
          "aTokenAddress": "0xfakeAXVSAddress",
          "protocol": "aave",
          "supplyApyPercentage": 99.99,
          "tokenAddress": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
          "userATokenBalanceMantissa": 20000000000000000000n,
          "userATokenBalanceWithInterestsMantissa": 24000000000000000000n,
          "userSupplyBalanceMantissa": 40000000000000000000n,
        },
        "vToken": {
          "address": "0xD5C4C2e2facBEB59D0216D0595d63FcDc6F9A1a7",
          "decimals": 8,
          "symbol": "vUSDC",
          "underlyingToken": {
            "address": "0x16227D60f7a0e586C66B005219dfc887D13C9531",
            "asset": "data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='24'%20height='24'%20fill='none'%20xmlns:v='https://vecta.io/nano'%3e%3cg%20clip-path='url(%23A)'%3e%3cpath%20d='M12%2024a11.97%2011.97%200%200%200%2012-12A11.97%2011.97%200%200%200%2012%200%2011.97%2011.97%200%200%200%200%2012a11.97%2011.97%200%200%200%2012%2012z'%20fill='%232775ca'/%3e%3cg%20fill='%23fff'%3e%3cpath%20d='M15.3%2013.9c0-1.75-1.05-2.35-3.15-2.6-1.5-.2-1.8-.6-1.8-1.3s.5-1.15%201.5-1.15c.9%200%201.4.3%201.65%201.05.05.15.2.25.35.25h.8A.34.34%200%200%200%2015%209.8v-.05c-.2-1.1-1.1-1.95-2.25-2.05V6.5c0-.2-.15-.35-.4-.4h-.75c-.2%200-.35.15-.4.4v1.15c-1.5.2-2.45%201.2-2.45%202.45%200%201.65%201%202.3%203.1%202.55%201.4.25%201.85.55%201.85%201.35s-.7%201.35-1.65%201.35c-1.3%200-1.75-.55-1.9-1.3-.05-.2-.2-.3-.35-.3h-.85a.34.34%200%200%200-.35.35v.05c.2%201.25%201%202.15%202.65%202.4v1.2c0%20.2.15.35.4.4h.75c.2%200%20.35-.15.4-.4v-1.2c1.5-.25%202.5-1.3%202.5-2.65zm-5.85%205.25A7.45%207.45%200%200%201%205%209.55c.75-2.1%202.4-3.7%204.45-4.45a.5.5%200%200%200%20.3-.5v-.7c0-.2-.1-.35-.3-.4-.05%200-.15%200-.2.05C4.5%205.05%201.9%2010.1%203.4%2014.85c.9%202.8%203.05%204.95%205.85%205.85.2.1.4%200%20.45-.2.05-.05.05-.1.05-.2v-.7c0-.15-.15-.35-.3-.45zm5.3-15.6c-.2-.1-.4%200-.45.2-.05.05-.05.1-.05.2v.7c0%20.2.15.4.3.5a7.45%207.45%200%200%201%204.45%209.6c-.75%202.1-2.4%203.7-4.45%204.45a.5.5%200%200%200-.3.5v.7c0%20.2.1.35.3.4.05%200%20.15%200%20.2-.05%204.75-1.5%207.35-6.55%205.85-11.3-.9-2.85-3.1-5-5.85-5.9z'/%3e%3c/g%3e%3c/g%3e%3cdefs%3e%3cclipPath%20id='A'%3e%3cpath%20fill='%23fff'%20d='M0%200h24v24H0z'/%3e%3c/clipPath%3e%3c/defs%3e%3c/svg%3e",
            "decimals": 6,
            "symbol": "USDC",
          },
        },
      },
      "transactionHash": undefined,
      "transactionReceipt": undefined,
    },
  ],
]
`;
